Add sign-up capabilities, and "tenant" behaviour for them. They will have their own set of customers and products. Also, added support for sales.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ asyncpg>=0.30.0
 aiosqlite==0.20.0
 pydantic-settings==2.1.0
 email-validator==2.1.0
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
 
 # Testing
 pytest==7.4.3
