--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,10 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 asyncio_mode = auto
+addopts = 
+    --verbose
+    --cov=.
+    --cov-report=html
+    --cov-report=term-missing
+    --cov-report=xml
+    --cov-fail-under=70
